--- a/Untitled10.ipynb
+++ b/Untitled10.ipynb
@@ -5079,6 +5079,592 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 349,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#MORE DATAFRAME"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 354,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from numpy.random import randn\n",
+    "np.random.seed(101)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 369,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dfr = pd.DataFrame(randn(5,4),['A','B','C','D','E'],['W','X','Y','Z'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 356,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>W</th>\n",
+       "      <th>X</th>\n",
+       "      <th>Y</th>\n",
+       "      <th>Z</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>A</td>\n",
+       "      <td>2.706850</td>\n",
+       "      <td>0.628133</td>\n",
+       "      <td>0.907969</td>\n",
+       "      <td>0.503826</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>B</td>\n",
+       "      <td>0.651118</td>\n",
+       "      <td>-0.319318</td>\n",
+       "      <td>-0.848077</td>\n",
+       "      <td>0.605965</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>C</td>\n",
+       "      <td>-2.018168</td>\n",
+       "      <td>0.740122</td>\n",
+       "      <td>0.528813</td>\n",
+       "      <td>-0.589001</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>D</td>\n",
+       "      <td>0.188695</td>\n",
+       "      <td>-0.758872</td>\n",
+       "      <td>-0.933237</td>\n",
+       "      <td>0.955057</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>E</td>\n",
+       "      <td>0.190794</td>\n",
+       "      <td>1.978757</td>\n",
+       "      <td>2.605967</td>\n",
+       "      <td>0.683509</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          W         X         Y         Z\n",
+       "A  2.706850  0.628133  0.907969  0.503826\n",
+       "B  0.651118 -0.319318 -0.848077  0.605965\n",
+       "C -2.018168  0.740122  0.528813 -0.589001\n",
+       "D  0.188695 -0.758872 -0.933237  0.955057\n",
+       "E  0.190794  1.978757  2.605967  0.683509"
+      ]
+     },
+     "execution_count": 356,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dfr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 358,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "booldf = dfr > 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 359,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>W</th>\n",
+       "      <th>X</th>\n",
+       "      <th>Y</th>\n",
+       "      <th>Z</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>A</td>\n",
+       "      <td>2.706850</td>\n",
+       "      <td>0.628133</td>\n",
+       "      <td>0.907969</td>\n",
+       "      <td>0.503826</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>B</td>\n",
+       "      <td>0.651118</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.605965</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>C</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.740122</td>\n",
+       "      <td>0.528813</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>D</td>\n",
+       "      <td>0.188695</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.955057</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>E</td>\n",
+       "      <td>0.190794</td>\n",
+       "      <td>1.978757</td>\n",
+       "      <td>2.605967</td>\n",
+       "      <td>0.683509</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          W         X         Y         Z\n",
+       "A  2.706850  0.628133  0.907969  0.503826\n",
+       "B  0.651118       NaN       NaN  0.605965\n",
+       "C       NaN  0.740122  0.528813       NaN\n",
+       "D  0.188695       NaN       NaN  0.955057\n",
+       "E  0.190794  1.978757  2.605967  0.683509"
+      ]
+     },
+     "execution_count": 359,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dfr[booldf]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 360,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>W</th>\n",
+       "      <th>X</th>\n",
+       "      <th>Y</th>\n",
+       "      <th>Z</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>A</td>\n",
+       "      <td>2.706850</td>\n",
+       "      <td>0.628133</td>\n",
+       "      <td>0.907969</td>\n",
+       "      <td>0.503826</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>B</td>\n",
+       "      <td>0.651118</td>\n",
+       "      <td>-0.319318</td>\n",
+       "      <td>-0.848077</td>\n",
+       "      <td>0.605965</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>C</td>\n",
+       "      <td>-2.018168</td>\n",
+       "      <td>0.740122</td>\n",
+       "      <td>0.528813</td>\n",
+       "      <td>-0.589001</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>D</td>\n",
+       "      <td>0.188695</td>\n",
+       "      <td>-0.758872</td>\n",
+       "      <td>-0.933237</td>\n",
+       "      <td>0.955057</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>E</td>\n",
+       "      <td>0.190794</td>\n",
+       "      <td>1.978757</td>\n",
+       "      <td>2.605967</td>\n",
+       "      <td>0.683509</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          W         X         Y         Z\n",
+       "A  2.706850  0.628133  0.907969  0.503826\n",
+       "B  0.651118 -0.319318 -0.848077  0.605965\n",
+       "C -2.018168  0.740122  0.528813 -0.589001\n",
+       "D  0.188695 -0.758872 -0.933237  0.955057\n",
+       "E  0.190794  1.978757  2.605967  0.683509"
+      ]
+     },
+     "execution_count": 360,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dfr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 361,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "A     True\n",
+       "B     True\n",
+       "C    False\n",
+       "D     True\n",
+       "E     True\n",
+       "Name: W, dtype: bool"
+      ]
+     },
+     "execution_count": 361,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dfr ['W'] > 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 371,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "A    False\n",
+       "B    False\n",
+       "C    False\n",
+       "D    False\n",
+       "E    False\n",
+       "Name: Y, dtype: bool"
+      ]
+     },
+     "execution_count": 371,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dfr ['Y'] == 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 365,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>W</th>\n",
+       "      <th>X</th>\n",
+       "      <th>Y</th>\n",
+       "      <th>Z</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>A</td>\n",
+       "      <td>2.706850</td>\n",
+       "      <td>0.628133</td>\n",
+       "      <td>0.907969</td>\n",
+       "      <td>0.503826</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>B</td>\n",
+       "      <td>0.651118</td>\n",
+       "      <td>-0.319318</td>\n",
+       "      <td>-0.848077</td>\n",
+       "      <td>0.605965</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>D</td>\n",
+       "      <td>0.188695</td>\n",
+       "      <td>-0.758872</td>\n",
+       "      <td>-0.933237</td>\n",
+       "      <td>0.955057</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>E</td>\n",
+       "      <td>0.190794</td>\n",
+       "      <td>1.978757</td>\n",
+       "      <td>2.605967</td>\n",
+       "      <td>0.683509</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          W         X         Y         Z\n",
+       "A  2.706850  0.628133  0.907969  0.503826\n",
+       "B  0.651118 -0.319318 -0.848077  0.605965\n",
+       "D  0.188695 -0.758872 -0.933237  0.955057\n",
+       "E  0.190794  1.978757  2.605967  0.683509"
+      ]
+     },
+     "execution_count": 365,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dfr [dfr ['W'] > 0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 372,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>W</th>\n",
+       "      <th>X</th>\n",
+       "      <th>Y</th>\n",
+       "      <th>Z</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [W, X, Y, Z]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 372,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dfr [dfr ['Y'] == 0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 373,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#grab all the rows in the dataframe where C < 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 374,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "W    False\n",
+       "X    False\n",
+       "Y    False\n",
+       "Z    False\n",
+       "Name: C, dtype: bool"
+      ]
+     },
+     "execution_count": 374,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dfr.loc ['C'] < 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 376,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>W</th>\n",
+       "      <th>X</th>\n",
+       "      <th>Y</th>\n",
+       "      <th>Z</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>A</td>\n",
+       "      <td>0.302665</td>\n",
+       "      <td>1.693723</td>\n",
+       "      <td>-1.706086</td>\n",
+       "      <td>-1.159119</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          W         X         Y         Z\n",
+       "A  0.302665  1.693723 -1.706086 -1.159119"
+      ]
+     },
+     "execution_count": 376,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dfr [dfr ['Z'] < 0]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
