--- a/Untitled10.ipynb
+++ b/Untitled10.ipynb
@@ -17893,12 +17893,693 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ser1[]"
+    "state = np.random.RandomState(100)\n",
+    "ser = pd.Series(state.normal(10, 5, 25))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0      1.251173\n",
+       "1     11.713402\n",
+       "2     15.765179\n",
+       "3      8.737820\n",
+       "4     14.906604\n",
+       "5     12.571094\n",
+       "6     11.105898\n",
+       "7      4.649783\n",
+       "8      9.052521\n",
+       "9     11.275007\n",
+       "10     7.709865\n",
+       "11    12.175817\n",
+       "12     7.082025\n",
+       "13    14.084235\n",
+       "14    13.363604\n",
+       "15     9.477944\n",
+       "16     7.343598\n",
+       "17    15.148663\n",
+       "18     7.809322\n",
+       "19     4.408409\n",
+       "20    18.094908\n",
+       "21    17.708026\n",
+       "22     8.740604\n",
+       "23     5.787821\n",
+       "24    10.922593\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 112,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ser"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count    25.000000\n",
+       "mean     10.435437\n",
+       "std       4.253118\n",
+       "min       1.251173\n",
+       "25%       7.709865\n",
+       "50%      10.922593\n",
+       "75%      13.363604\n",
+       "max      18.094908\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 113,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ser.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 1.25117263,  7.70986507, 10.92259345, 13.36360403])"
+      ]
+     },
+     "execution_count": 117,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.percentile(ser, q = [0, 25, 50, 75])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ser = pd.Series(np.take(list('abcdefgh'), np.random.randint(8, size=30)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0     g\n",
+       "1     h\n",
+       "2     b\n",
+       "3     c\n",
+       "4     a\n",
+       "5     g\n",
+       "6     b\n",
+       "7     b\n",
+       "8     c\n",
+       "9     d\n",
+       "10    g\n",
+       "11    a\n",
+       "12    f\n",
+       "13    f\n",
+       "14    b\n",
+       "15    c\n",
+       "16    c\n",
+       "17    c\n",
+       "18    d\n",
+       "19    a\n",
+       "20    a\n",
+       "21    c\n",
+       "22    g\n",
+       "23    f\n",
+       "24    c\n",
+       "25    d\n",
+       "26    b\n",
+       "27    e\n",
+       "28    d\n",
+       "29    b\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 119,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ser"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "g    6\n",
+       "e    4\n",
+       "h    4\n",
+       "a    4\n",
+       "b    3\n",
+       "f    3\n",
+       "d    3\n",
+       "c    3\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 127,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.Series(np.take(list('abcdefgh'), np.random.randint(8, size = 30))).value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 137,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.random.RandomState(100)\n",
+    "ser = pd.Series(np.random.randint(1, 5, [12]))\n",
+    "ser.max()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4        5\n",
+       "1        4\n",
+       "Other    3\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 139,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ser[~ser.isin(ser.value_counts().index[:2])] = 'Other'\n",
+    "ser.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0     2\n",
+       "1     9\n",
+       "2     5\n",
+       "3     4\n",
+       "4     4\n",
+       "5     9\n",
+       "6     3\n",
+       "7     5\n",
+       "8     7\n",
+       "9     1\n",
+       "10    7\n",
+       "11    9\n",
+       "12    6\n",
+       "13    6\n",
+       "14    8\n",
+       "15    4\n",
+       "16    3\n",
+       "17    5\n",
+       "18    6\n",
+       "19    9\n",
+       "20    7\n",
+       "21    3\n",
+       "22    1\n",
+       "23    4\n",
+       "24    4\n",
+       "25    5\n",
+       "26    5\n",
+       "27    6\n",
+       "28    9\n",
+       "29    7\n",
+       "30    6\n",
+       "31    4\n",
+       "32    3\n",
+       "33    8\n",
+       "34    8\n",
+       "dtype: int32"
+      ]
+     },
+     "execution_count": 140,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ser = pd.Series(np.random.randint(1, 10, 35))\n",
+    "ser"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 158,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "newdf = pd.DataFrame(ser.values.reshape(7,5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 159,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>9</td>\n",
+       "      <td>5</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>9</td>\n",
+       "      <td>3</td>\n",
+       "      <td>5</td>\n",
+       "      <td>7</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>7</td>\n",
+       "      <td>9</td>\n",
+       "      <td>6</td>\n",
+       "      <td>6</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "      <td>5</td>\n",
+       "      <td>6</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>7</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>6</td>\n",
+       "      <td>9</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>6</td>\n",
+       "      <td>6</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "      <td>8</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   0  1  2  3  4\n",
+       "0  2  9  5  4  4\n",
+       "1  9  3  5  7  1\n",
+       "2  7  9  6  6  8\n",
+       "3  4  3  5  6  9\n",
+       "4  7  3  1  4  4\n",
+       "5  5  5  6  9  7\n",
+       "6  6  4  3  8  8"
+      ]
+     },
+     "execution_count": 159,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "newdf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 160,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    1\n",
+       "1    1\n",
+       "2    3\n",
+       "3    1\n",
+       "4    1\n",
+       "5    3\n",
+       "6    1\n",
+       "7    1\n",
+       "8    3\n",
+       "9    1\n",
+       "dtype: int32"
+      ]
+     },
+     "execution_count": 160,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ser = pd.Series(np.random.randint(1, 5, 10))\n",
+    "ser"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 162,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def three (x):\n",
+    "    if x%3 == 0:\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 174,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2    3\n",
+       "5    3\n",
+       "8    3\n",
+       "dtype: int32"
+      ]
+     },
+     "execution_count": 174,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ser[ser.apply(three)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 180,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2    3.0\n",
+       "5    3.0\n",
+       "8    3.0\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 180,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ser.where(lambda x: x % 3 == 0).dropna()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 181,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ser = pd.Series(list('abcdefghijklmnopqrstuvwxyz'))\n",
+    "pos = [0, 4, 8, 14, 20]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 183,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0     a\n",
+       "4     e\n",
+       "8     i\n",
+       "14    o\n",
+       "20    u\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 183,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ser.iloc[pos]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 184,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0     a\n",
+       "4     e\n",
+       "8     i\n",
+       "14    o\n",
+       "20    u\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 184,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ser.take(pos)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 185,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ser1 = pd.Series(range(5))\n",
+    "ser2 = pd.Series(list('abcde'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 194,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    0\n",
+       "1    1\n",
+       "2    2\n",
+       "3    3\n",
+       "4    4\n",
+       "0    a\n",
+       "1    b\n",
+       "2    c\n",
+       "3    d\n",
+       "4    e\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 194,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.concat([ser1,ser2], axis = 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 195,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>a</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>b</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>c</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>d</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>e</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   0  1\n",
+       "0  0  a\n",
+       "1  1  b\n",
+       "2  2  c\n",
+       "3  3  d\n",
+       "4  4  e"
+      ]
+     },
+     "execution_count": 195,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.concat([ser1,ser2], axis = 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
