--- a/Data_Capstone_Projects.ipynb
+++ b/Data_Capstone_Projects.ipynb
@@ -1777,33 +1777,382 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [],
    "source": [
     "from pandas_datareader import data, wb\n",
-    "import datetime"
+    "import datetime\n",
+    "from datetime import date"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'start' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-153-4b5ac44dd272>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m#BANK OF AMERICA\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mBAC\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdata\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mDataReader\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'BAC'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'google'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mstart\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mend\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m: name 'start' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.8.1\n"
      ]
     }
    ],
    "source": [
-    "start = "
+    "import pandas_datareader\n",
+    "print(pandas_datareader.__version__)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 162,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "start = datetime.datetime(2006, 1, 1)\n",
+    "end = datetime.datetime(2016, 1, 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 166,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "BAC = data.DataReader(\"BAC\", 'yahoo', start, end)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 167,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "C = data.DataReader('C', 'yahoo', start, end)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 168,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "GS = data.DataReader('GS', 'yahoo', start, end)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 169,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "JPM = data.DataReader('JPM', 'yahoo', start, end)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 170,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "MS = data.DataReader('MS', 'yahoo', start, end)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 171,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "WFC = data.DataReader('WFC', 'yahoo', start, end)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 172,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tickers = ['BAC', 'C', 'GS', 'JPM', 'MS', 'WFC']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 174,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bank_stocks = pd.concat([BAC,C,GS,JPM,MS,WFC], axis = 1, keys = tickers)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 175,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bank_stocks.columns.name = ['Bank Ticker', 'Stock Info']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 176,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr:last-of-type th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th colspan=\"6\" halign=\"left\">BAC</th>\n",
+       "      <th colspan=\"4\" halign=\"left\">C</th>\n",
+       "      <th>...</th>\n",
+       "      <th colspan=\"4\" halign=\"left\">MS</th>\n",
+       "      <th colspan=\"6\" halign=\"left\">WFC</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th>High</th>\n",
+       "      <th>Low</th>\n",
+       "      <th>Open</th>\n",
+       "      <th>Close</th>\n",
+       "      <th>Volume</th>\n",
+       "      <th>Adj Close</th>\n",
+       "      <th>High</th>\n",
+       "      <th>Low</th>\n",
+       "      <th>Open</th>\n",
+       "      <th>Close</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Open</th>\n",
+       "      <th>Close</th>\n",
+       "      <th>Volume</th>\n",
+       "      <th>Adj Close</th>\n",
+       "      <th>High</th>\n",
+       "      <th>Low</th>\n",
+       "      <th>Open</th>\n",
+       "      <th>Close</th>\n",
+       "      <th>Volume</th>\n",
+       "      <th>Adj Close</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>2006-01-03</td>\n",
+       "      <td>47.180000</td>\n",
+       "      <td>46.150002</td>\n",
+       "      <td>46.919998</td>\n",
+       "      <td>47.080002</td>\n",
+       "      <td>16296700.0</td>\n",
+       "      <td>35.054218</td>\n",
+       "      <td>493.799988</td>\n",
+       "      <td>481.100006</td>\n",
+       "      <td>490.000000</td>\n",
+       "      <td>492.899994</td>\n",
+       "      <td>...</td>\n",
+       "      <td>57.169998</td>\n",
+       "      <td>58.310001</td>\n",
+       "      <td>5377000.0</td>\n",
+       "      <td>37.399338</td>\n",
+       "      <td>31.975000</td>\n",
+       "      <td>31.195000</td>\n",
+       "      <td>31.600000</td>\n",
+       "      <td>31.900000</td>\n",
+       "      <td>11016400.0</td>\n",
+       "      <td>20.408512</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2006-01-04</td>\n",
+       "      <td>47.240002</td>\n",
+       "      <td>46.450001</td>\n",
+       "      <td>47.000000</td>\n",
+       "      <td>46.580002</td>\n",
+       "      <td>17757900.0</td>\n",
+       "      <td>34.681938</td>\n",
+       "      <td>491.000000</td>\n",
+       "      <td>483.500000</td>\n",
+       "      <td>488.600006</td>\n",
+       "      <td>483.799988</td>\n",
+       "      <td>...</td>\n",
+       "      <td>58.700001</td>\n",
+       "      <td>58.349998</td>\n",
+       "      <td>7977800.0</td>\n",
+       "      <td>37.424999</td>\n",
+       "      <td>31.820000</td>\n",
+       "      <td>31.365000</td>\n",
+       "      <td>31.799999</td>\n",
+       "      <td>31.530001</td>\n",
+       "      <td>10870000.0</td>\n",
+       "      <td>20.171795</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2006-01-05</td>\n",
+       "      <td>46.830002</td>\n",
+       "      <td>46.320000</td>\n",
+       "      <td>46.580002</td>\n",
+       "      <td>46.639999</td>\n",
+       "      <td>14970700.0</td>\n",
+       "      <td>34.726604</td>\n",
+       "      <td>487.799988</td>\n",
+       "      <td>484.000000</td>\n",
+       "      <td>484.399994</td>\n",
+       "      <td>486.200012</td>\n",
+       "      <td>...</td>\n",
+       "      <td>58.549999</td>\n",
+       "      <td>58.509998</td>\n",
+       "      <td>5778000.0</td>\n",
+       "      <td>37.527611</td>\n",
+       "      <td>31.555000</td>\n",
+       "      <td>31.309999</td>\n",
+       "      <td>31.500000</td>\n",
+       "      <td>31.495001</td>\n",
+       "      <td>10158000.0</td>\n",
+       "      <td>20.149401</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2006-01-06</td>\n",
+       "      <td>46.910000</td>\n",
+       "      <td>46.349998</td>\n",
+       "      <td>46.799999</td>\n",
+       "      <td>46.570000</td>\n",
+       "      <td>12599800.0</td>\n",
+       "      <td>34.674480</td>\n",
+       "      <td>489.000000</td>\n",
+       "      <td>482.000000</td>\n",
+       "      <td>488.799988</td>\n",
+       "      <td>486.200012</td>\n",
+       "      <td>...</td>\n",
+       "      <td>58.770000</td>\n",
+       "      <td>58.570000</td>\n",
+       "      <td>6889800.0</td>\n",
+       "      <td>37.566090</td>\n",
+       "      <td>31.775000</td>\n",
+       "      <td>31.385000</td>\n",
+       "      <td>31.580000</td>\n",
+       "      <td>31.680000</td>\n",
+       "      <td>8403800.0</td>\n",
+       "      <td>20.267757</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2006-01-09</td>\n",
+       "      <td>46.970001</td>\n",
+       "      <td>46.360001</td>\n",
+       "      <td>46.720001</td>\n",
+       "      <td>46.599998</td>\n",
+       "      <td>15619400.0</td>\n",
+       "      <td>34.696808</td>\n",
+       "      <td>487.399994</td>\n",
+       "      <td>483.000000</td>\n",
+       "      <td>486.000000</td>\n",
+       "      <td>483.899994</td>\n",
+       "      <td>...</td>\n",
+       "      <td>58.630001</td>\n",
+       "      <td>59.189999</td>\n",
+       "      <td>4144500.0</td>\n",
+       "      <td>37.963749</td>\n",
+       "      <td>31.825001</td>\n",
+       "      <td>31.555000</td>\n",
+       "      <td>31.674999</td>\n",
+       "      <td>31.674999</td>\n",
+       "      <td>5619600.0</td>\n",
+       "      <td>20.264565</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 36 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  BAC                                                          \\\n",
+       "                 High        Low       Open      Close      Volume  Adj Close   \n",
+       "Date                                                                            \n",
+       "2006-01-03  47.180000  46.150002  46.919998  47.080002  16296700.0  35.054218   \n",
+       "2006-01-04  47.240002  46.450001  47.000000  46.580002  17757900.0  34.681938   \n",
+       "2006-01-05  46.830002  46.320000  46.580002  46.639999  14970700.0  34.726604   \n",
+       "2006-01-06  46.910000  46.349998  46.799999  46.570000  12599800.0  34.674480   \n",
+       "2006-01-09  46.970001  46.360001  46.720001  46.599998  15619400.0  34.696808   \n",
+       "\n",
+       "                     C                                      ...         MS  \\\n",
+       "                  High         Low        Open       Close  ...       Open   \n",
+       "Date                                                        ...              \n",
+       "2006-01-03  493.799988  481.100006  490.000000  492.899994  ...  57.169998   \n",
+       "2006-01-04  491.000000  483.500000  488.600006  483.799988  ...  58.700001   \n",
+       "2006-01-05  487.799988  484.000000  484.399994  486.200012  ...  58.549999   \n",
+       "2006-01-06  489.000000  482.000000  488.799988  486.200012  ...  58.770000   \n",
+       "2006-01-09  487.399994  483.000000  486.000000  483.899994  ...  58.630001   \n",
+       "\n",
+       "                                                   WFC                        \\\n",
+       "                Close     Volume  Adj Close       High        Low       Open   \n",
+       "Date                                                                           \n",
+       "2006-01-03  58.310001  5377000.0  37.399338  31.975000  31.195000  31.600000   \n",
+       "2006-01-04  58.349998  7977800.0  37.424999  31.820000  31.365000  31.799999   \n",
+       "2006-01-05  58.509998  5778000.0  37.527611  31.555000  31.309999  31.500000   \n",
+       "2006-01-06  58.570000  6889800.0  37.566090  31.775000  31.385000  31.580000   \n",
+       "2006-01-09  59.189999  4144500.0  37.963749  31.825001  31.555000  31.674999   \n",
+       "\n",
+       "                                              \n",
+       "                Close      Volume  Adj Close  \n",
+       "Date                                          \n",
+       "2006-01-03  31.900000  11016400.0  20.408512  \n",
+       "2006-01-04  31.530001  10870000.0  20.171795  \n",
+       "2006-01-05  31.495001  10158000.0  20.149401  \n",
+       "2006-01-06  31.680000   8403800.0  20.267757  \n",
+       "2006-01-09  31.674999   5619600.0  20.264565  \n",
+       "\n",
+       "[5 rows x 36 columns]"
+      ]
+     },
+     "execution_count": 176,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bank_stocks.head()"
    ]
   },
   {
