--- a/EDAs on different datasets.ipynb
+++ b/EDAs on different datasets.ipynb
@@ -6,6 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Import libraries for analyses\n",
+    "\n",
     "import pandas as pd\n",
     "import numpy as np"
    ]
@@ -16,6 +18,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Read in dataset\n",
+    "\n",
     "hotel_data = pd.read_csv('hotel_bookings.csv')"
    ]
   },
@@ -246,6 +250,8 @@
     }
    ],
    "source": [
+    "#Check the head of the dataset\n",
+    "\n",
     "hotel_data.head()"
    ]
   },
@@ -301,6 +307,8 @@
     }
    ],
    "source": [
+    "#Check the data info\n",
+    "\n",
     "hotel_data.info()"
    ]
   },
@@ -310,6 +318,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Import our visualization libraries\n",
+    "\n",
     "import seaborn as sb\n",
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline"
@@ -321,6 +331,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Set grid style to dark grid\n",
+    "\n",
     "sb.set_style('darkgrid')"
    ]
   },
@@ -351,6 +363,8 @@
     }
    ],
    "source": [
+    "#Visualize data to see the null values areas\n",
+    "\n",
     "plt.figure(figsize=(15,10))\n",
     "sb.heatmap(hotel_data.isnull(),yticklabels=False,cbar=False,cmap='viridis')"
    ]
@@ -383,6 +397,8 @@
     }
    ],
    "source": [
+    "#What does the company column entail\n",
+    "\n",
     "hotel_data['company'].value_counts()"
    ]
   },
@@ -405,6 +421,8 @@
     }
    ],
    "source": [
+    "#What does the is_repeated_guest column entail\n",
+    "\n",
     "hotel_data['is_repeated_guest'].value_counts()"
    ]
   },
@@ -427,6 +445,8 @@
     }
    ],
    "source": [
+    "#Check value counts on each of the hotels\n",
+    "\n",
     "hotel_data['hotel'].value_counts()"
    ]
   },
@@ -438,7 +458,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x194ce97cc10>"
+       "<matplotlib.legend.Legend at 0x20b31ff1370>"
       ]
      },
      "execution_count": 11,
@@ -457,6 +477,8 @@
     }
    ],
    "source": [
+    "#Visualize the number of adults that stayed in each hotel\n",
+    "\n",
     "plt.figure(figsize=(10,6))\n",
     "sb.countplot(x=hotel_data['adults'], data=hotel_data, hue=hotel_data['hotel'],palette='plasma')\n",
     "plt.legend(loc='upper left',bbox_to_anchor=(1,0.65))"
@@ -670,7 +692,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x194c8d03e50>"
+       "<matplotlib.legend.Legend at 0x20b32342910>"
       ]
      },
      "execution_count": 13,
@@ -689,6 +711,8 @@
     }
    ],
    "source": [
+    "#Visualize the number of times people arrived yearly in each hotel\n",
+    "\n",
     "plt.figure(figsize=(10,6))\n",
     "sb.countplot(x=hotel_data['arrival_date_year'], data=hotel_data, hue=hotel_data['hotel'],palette='magma')\n",
     "plt.legend(loc='upper left',bbox_to_anchor=(1,0.65))"
@@ -702,7 +726,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x194cea38ee0>"
+       "<matplotlib.legend.Legend at 0x20b32729550>"
       ]
      },
      "execution_count": 14,
@@ -721,6 +745,8 @@
     }
    ],
    "source": [
+    "#Visualize the customer type for each hotel\n",
+    "\n",
     "plt.figure(figsize=(10,6))\n",
     "sb.countplot(x=hotel_data['customer_type'], data=hotel_data, hue=hotel_data['hotel'],palette='viridis')\n",
     "plt.legend(loc='upper left',bbox_to_anchor=(1,0.65))"
@@ -753,6 +779,8 @@
     }
    ],
    "source": [
+    "#Visualize the number of times people canceled for each hotel\n",
+    "\n",
     "plt.figure(figsize=(10,6))\n",
     "sb.countplot(x=hotel_data['is_canceled'],data=hotel_data,hue=hotel_data['hotel'],palette='coolwarm')"
    ]
